# multiagentIA

./: .gitignore  README.md
MAS/meta_mas/: .env.example  README.md  main.py  pyproject.toml
MAS/meta_mas/agents/: __init__.py  analyst.py  architect.py  code_generator.py  deployer.py  orchestrator.py  validator.py
MAS/meta_mas/config/: __init__.py  agents_config.yaml  settings.py
MAS/meta_mas/core/: __init__.py  agent_registry.py  base_agent.py  memory.py  message_bus.py
MAS/meta_mas/templates/: agent_template.py.jinja2  config_template.yaml.jinja2  pyproject_template.toml.jinja2  readme_template.md.jinja2
MAS/meta_mas/tests/: __init__.py  test_base_agent.py  test_code_generator.py  test_message_bus.py
MAS/meta_mas/utils/: __init__.py  code_parser.py  file_manager.py  graph.py  logger.py  ollama_client.py
agentActu/: main.py  pyproject.toml
agentActu/agents/: search_agent.py  summary_agent.py  validation_agent.py
agentActu/config/: settings.py
agentActu/graph/: state.py  workflow.py
agentActu/tools/: search_tools.py
agentFiction/: graph.py  main.py  pyproject.toml  state.py
agentFiction/agents/: __init__.py  analyst.py  checker.py  ideator.py  synthesizer.py  writer.py
agentFiction/memory/: narrative_bible.py  short_term.py
agentFiction/prompts/: analyst_prompt.py  checker_prompt.py  ideator_prompt.py  synthesizer_prompt.py  writer_prompt.py
agentFiction/tests/: test_agents.py  test_state.py
agentFiction/utils/: output_formatter.py  scoring.py
tuto/: .env  README.md  output_L'intelligence_artificielle_et.md  pyproject.toml
tuto/examples/: advanced_example.py
tuto/src/: config.py  models.py
tuto/src/agents/: base_agent.py  critic.py  researcher.py  writer.py
tuto/src/graphs/: advanced_graph.py  simple_graph.py
tuto/src/utils/: logger.py  memory.py  prompt_optimizer.py
tuto/tests/: test_agents.py
