# pyproject.toml
[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Système multi-agent local avec Ollama & LangGraph"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pytest>=7.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ipython>=8.0.0",
]

# ── Configuration Pytest ───────────────────────────────────────────────────
[tool.pytest.ini_options]
# Indique à pytest où chercher les modules
pythonpath = ["."]          # Racine du projet dans le PYTHONPATH
testpaths  = ["tests"]      # Dossier des tests
asyncio_mode = "auto"

# ── Configuration UV ───────────────────────────────────────────────────────
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]             # Cherche les packages à la racine
