[project]
name = "meta-mas"
version = "0.1.0"
description = "Meta Multi-Agent System — generates and orchestrates other MAS"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ollama>=0.3",
    "rich>=13.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "loguru>=0.7",
    "python-dotenv>=1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

